--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".xfermode滤镜.ColorFilterActivity">
+
+        <activity android:name=".canvas.demo.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity android:name=".xfermode滤镜.ColorFilterActivity" />
+        <!--<activity android:name=".canvas.demo.SplashActivity" />-->
+
     </application>
 
 </manifest>
