--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        jcenter(){
+            url 'http://jcenter.bintray.com/'
+        }
         
     }
     dependencies {
@@ -17,7 +19,9 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        jcenter(){
+            url 'http://jcenter.bintray.com/'
+        }
         
     }
 }
