--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".xfermode滤镜.ColorFilterActivity" />
+        <activity android:name=".自定义view.xfermode滤镜.ColorFilterActivity" />
         <!--<activity android:name=".canvas.demo.SplashActivity" />-->
 
     </application>
